[package]
name = "raftkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


categories = ["algorithms", "asynchronous", "data-structures"]
description = "An example distributed key-value store built upon `openraft`."
homepage = "https://github.com/datafuselabs/openraft"
keywords = ["raft", "consensus"]
license = "MIT/Apache-2.0"
repository = "https://github.com/datafuselabs/openraft"

[[bin]]
name = "kv"
path = "src/bin/main.rs"

[[bin]]
name = "tt"
path = "src/tt.rs"

[[bin]]
name = "tc"
path = "src/tcpclient.rs"

[[bin]]
name="bg"
path="src/bitcasklog.rs"


[dependencies]
bitcask={path = "../bitcask"}
openraft = { version="0.8", features = ["serde"] }

actix-web = "4.0.0-rc.2"
async-trait = "0.1.36"
clap = { version = "3.0.13", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
bincode = "1.3.3"

[dev-dependencies]
anyhow = "1.0.63"
maplit = "1.0.2"
criterion = "0.4"

[[bench]]
name = "my_benchmark"
harness = false

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"]